--- a/matrixAlgorithm.ipynb
+++ b/matrixAlgorithm.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "metadata": {}
    },
@@ -431,9 +431,9 @@
       "size_t indices[25] = {17, 2, 12, 17, 1, 4, 4, 10, 18, 3, 4, 5, 15, 17, 13, 15, 18, 1, 2, 16, 6, 8, 15, 6, 8};\n",
       "size_t indptr[11] = {0, 1, 4, 6, 9, 14, 17, 18, 20, 23, 25};\n",
       "\n",
-      "fr_t witness[20] = {37, 59, 0, 138, 51, 0, 11, 0, 0, 0, 87, 46, 61, 0, 140, 59, 0, 0, 214, 0};\n",
+      "fr_t witness[20] = {1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1};\n",
       "\n",
-      "[0, 427, 7959, 27401, 26184, 44341, 11623, 0, 11487, 1771]\n"
+      "[133, 255, 141, 315, 531, 285, 197, 377, 533, 209]\n"
      ]
     }
    ],
@@ -455,8 +455,8 @@
     "\n",
     "\n",
     "A_ = sparseRandom(genMatrix(nRows, nCols), 30)\n",
-    "W = randWitness(A_, nCols)\n",
-    "# W = [1]*nCols\n",
+    "# W = randWitness(A_, nCols)\n",
+    "W = [1]*nCols\n",
     "A = SparseMatrix().fromMatrix(A_)\n",
     "\n",
     "\n",
@@ -486,328 +486,6 @@
    "source": [
     "# Experiments"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t = SparseMatrix()\n",
-    "t.data\n",
-    "t.indices\n",
-    "t.indptr\n",
-    "t.nCols\n",
-    "t.nRows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[9, 9, 8, 8, 8, 7, 7, 6, 6, 5, 4, 3, 2, 2, 1, 1, 1, 0, 0]\n",
-      "[1, 6, 8, 0, 2, 5, 9, 1, 2, 6, 7, 8, 9, 0, 1, 8, 3, 4, 7]\n"
-     ]
-    }
-   ],
-   "source": [
-    "indices = [1, 6, 8, 0, 2, 5, 9, 1, 2, 6, 7, 8, 9, 0, 1, 8, 3, 4, 7]\n",
-    "colSort = [12, 6, 2, 15, 11, 18, 10, 9, 1, 5, 17, 16, 8, 4, 0, 7, 14, 13, 3]\n",
-    "\n",
-    "res=[-1]*19\n",
-    "\n",
-    "for i in range(19):\n",
-    "    res[i] = indices[colSort[i]]\n",
-    "\n",
-    "print(res)\n",
-    "\n",
-    "res2=[-1]*19\n",
-    "for i in range(19):\n",
-    "    res2[colSort[i]]=res[i]\n",
-    "\n",
-    "print(res2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 3, 3, 3, 3, 3, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 1, 1, 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "colByWeight = [3, 2, 3, 2, 2, 1, 2, 3, 2, 2, 2, 3, 2, 2, 3, 3, 1, 1, 2]\n",
-    "columSortKey = [2, 15, 14, 7, 11, 0, 9, 18, 13, 12, 10, 8, 6, 4, 3, 1, 5, 16, 17]\n",
-    "indices = [1, 6, 8, 0, 2, 5, 9, 1, 2, 6, 7, 8, 9, 0, 1, 8, 3, 4, 7]\n",
-    "\n",
-    "res = [0]*19\n",
-    "\n",
-    "for i in range(19):\n",
-    "    res[i]=colByWeight[columSortKey[i]]\n",
-    "\n",
-    "print(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[7, 8, 9, 10, 11, 12, 3, 4, 5, 6, 0, 1, 2, 13, 14, 15, 16, 17, 18]\n",
-      "[2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 0, 0, 0, 3, 3, 3, 4, 4, 4]\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = [0, 0, 0, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 3, 3, 3, 4, 4, 4]\n",
-    "\n",
-    "b =sort_by_frequency(a)\n",
-    "print(b)\n",
-    "\n",
-    "c = []\n",
-    "for i in range(len(a)):\n",
-    "    c.append(a[b[i]])\n",
-    "\n",
-    "print(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 4, 4, 4, 3, 3, 3, 0, 0, 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "data = [0, 0, 0, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 3, 3, 3, 4, 4, 4]\n",
-    "multTarget = [7, 8, 9, 10, 11, 12, 3, 4, 5, 6, 18, 17, 16, 13, 14, 15, 2, 1, 0]\n",
-    "\n",
-    "res = [-1]*19\n",
-    "\n",
-    "for i in range(19):\n",
-    "    res[i]=data[multTarget[i]]\n",
-    "\n",
-    "print(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(55, 2, 8),\n",
-       " (75, 2, 1),\n",
-       " (197, 2, 9),\n",
-       " (37, 2, 7),\n",
-       " (51, 2, 6),\n",
-       " (123, 2, 2),\n",
-       " (170, 1, 5),\n",
-       " (96, 1, 0),\n",
-       " (32, 1, 9),\n",
-       " (45, 1, 2),\n",
-       " (170, 4, 3),\n",
-       " (200, 4, 4),\n",
-       " (163, 4, 7),\n",
-       " (197, 3, 0),\n",
-       " (133, 3, 1),\n",
-       " (244, 3, 8),\n",
-       " (7, 0, 6),\n",
-       " (229, 0, 1),\n",
-       " (19, 0, 8)]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def applyPermute(data, destination):\n",
-    "    a = [-1]*len(data)\n",
-    "    for i in range(len(data)):\n",
-    "        a[i] = data[destination[i]]\n",
-    "\n",
-    "    return a\n",
-    "\n",
-    "origData = [229, 7, 19, 96, 45, 170, 32, 75, 123, 51, 37, 55, 197, 197, 133, 244, 170, 200, 163]\n",
-    "origCol = [1, 6, 8, 0, 2, 5, 9, 1, 2, 6, 7, 8, 9, 0, 1, 8, 3, 4, 7]\n",
-    "origRow = [0, 0, 0, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 3, 3, 3, 4, 4, 4]\n",
-    "\n",
-    "posVector = [7, 8, 9, 10, 11, 12, 3, 4, 5, 6, 18, 17, 16, 13, 14, 15, 2, 1, 0]\n",
-    "columSortKey = [2, 15, 11, 14, 7, 0, 12, 6, 18, 10, 9, 1, 8, 4, 13, 3, 5, 17, 16]\n",
-    "\n",
-    "data = [19, 244, 55, 133, 75, 229, 197, 32, 163, 37, 51, 7, 123, 45, 197, 96, 170, 200, 170]\n",
-    "ind = [8, 8, 8, 1, 1, 1, 9, 9, 7, 7, 6, 6, 2, 2, 0, 0, 5, 4, 3]\n",
-    "multTarget =[9, 15, 17, 14, 4, 7, 16, 3, 0, 18, 6, 8, 5, 11, 13, 10, 12, 1, 2]\n",
-    "mT = [2, 4, 6, 9, 10, 12, 16, 15, 7, 13, 18, 17, 8, 14, 3, 1, 11, 5, 0]\n",
-    "\n",
-    "\n",
-    "dr = [(a,b,c) for a, b, c in zip(origData, origRow, origCol)]\n",
-    "applyPermute(applyPermute(dr, columSortKey), mT)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 4, 4, 4, 3, 3, 3, 0, 0, 0]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "posVector = [7, 8, 9, 10, 11, 12, 3, 4, 5, 6, 18, 17, 16, 13, 14, 15, 2, 1, 0]\n",
-    "applyPermute(origRow, posVector)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 6, 5, 4, 2, 3]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = sort_by_frequency([3,3,5,6,4,1,0])\n",
-    "a "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3, 3, 0, 1, 4, 5, 6]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "applyPermute([3,3,5,6,4,1,0], a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [],
-   "source": [
-    "def invertPermutation(p):\n",
-    "    res = [0]*len(p)\n",
-    "    for i in range(len(p)):\n",
-    "        res[p[i]]=i\n",
-    "\n",
-    "    return res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 3, 0, 1, 4, 5, 6]\n"
-     ]
-    }
-   ],
-   "source": [
-    "d = [3,3,5,6,4,1,0]\n",
-    "b = invertPermutation(a)\n",
-    "res = [0]*len(b)\n",
-    "for i in range(len(b)):\n",
-    "    res[b[i]] = d[i]\n",
-    "\n",
-    "print(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
