Savepoint for future work

--- a/matrixAlgorithm.ipynb
+++ b/matrixAlgorithm.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# IMPORTANT NOTE\n",
+    "\n",
+    "This way of dealing with the matrix is too costly in the preprocessing step, and experiments show that the extra ordering of operands doesn't yield notable gains in speed.\n",
+    "This notebook is kept for historical reasons, and doesn't match the multiplication kernels currently implemented."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -478,13 +488,6 @@
     "assert m==m2\n",
     "\n",
     "print(m)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Experiments"
    ]
   }
  ],
